test/cases/compile_errors/invalid_underscore_placement_in_float_literal-1.zig
fn main() void {
    var bad: f128 = 0._0;
    _ = bad;
}

// error
//
// :2:23: error: expected digit before digit separator
